'corrected the collapsing navbar for IE7. I thought I had corrected that some time ago??? Set the navbar width to 98% and removed those different width settings.'

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -399,18 +399,11 @@ form.mform div.error,form.mform fieldset.error {
 }
 
 .navbar {
-  width:100%;
+  height:100%;
+  width:98%;
   padding:3px 0.5em;
   border-width:1px;
   border-style:solid;
-}
-
-div.navbar {
-  width: auto;
-}
-
-table.navbar {
-  width: 100%;
 }
 
 .navbar .navbutton form {
